apps/sonarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`sonarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: sonarr
          port: main
  tls:
    secretName: sonarr-cert
